--- a/header-version-1.html/header.css
+++ b/header-version-1.html/header.css
@@ -12,19 +12,20 @@ title {
   font-family: Rubik;
 }
 header {
-  background-image: url(../images/imagen-temporal.jpg);
   width: 100%;
-  height: 300px;
+  height: 45px;
   box-sizing: content-box;
-  display: flex;
-  padding: auto;
-  background-color: aqua;
+  background-color: rgb(64, 231, 13);
 }
 nav {
   background-color: aqua;
   display: flex;
-  position: absolute;
+  position: relative;
   width: 100%;
+  height: 45px;
+  padding-right: 17px;
+  padding-right: 17px;
+  padding-top: 17px;
 }
 .menu {
   display: flex;
@@ -34,4 +35,31 @@ nav {
   margin-right: 18px;
   text-transform: uppercase;
   font-family: Rubik-Medium;
+}
+.imagen1 {
+  width: 100%;
+  height: 421px;
+  object-fit: fill;
+  overflow: hidden;
+  object-fit: cover;
+}
+.hero {
+  width: 100%;
+  max-width: 600px;
+  max-height: 421px;
+  overflow: hidden;
+  position: relative;
+}
+.rectangle {
+  width: 290px;
+  height: 80px;
+  margin: 387px 15px 0;
+  padding: 14px 15px 16px;
+  background-color: rgb(224, 15, 15);
+  display: inline;
+}
+main {
+  background-color: rgb(196, 32, 160);
+}
+.divisor {
 }
