--- a/header-version-1.html/header.css
+++ b/header-version-1.html/header.css
@@ -11,11 +11,15 @@ title {
   padding-bottom: 16px;
   font-family: Rubik;
 }
+a{
+  text-decoration: none;
+  color: white;
+}
 header {
   width: 100%;
-  height: 45px;
+  height: 421px;
   box-sizing: content-box;
-  background-color: rgb(64, 231, 13);
+  background-color: aqua;
 }
 nav {
   background-color: aqua;
@@ -25,7 +29,6 @@ nav {
   height: 45px;
   padding-right: 17px;
   padding-right: 17px;
-  padding-top: 17px;
 }
 .menu {
   display: flex;
@@ -38,10 +41,14 @@ nav {
 }
 .imagen1 {
   width: 100%;
-  height: 421px;
+  height: 100%;
   object-fit: fill;
   overflow: hidden;
   object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 .hero {
   width: 100%;
@@ -56,10 +63,10 @@ nav {
   margin: 387px 15px 0;
   padding: 14px 15px 16px;
   background-color: rgb(224, 15, 15);
-  display: inline;
+  display: block;
+  position: relative;
+  z-index: 999;
 }
-main {
-  background-color: rgb(196, 32, 160);
 }
 .divisor {
 }
