--- a/whoweare-version-1/styles/main.css
+++ b/whoweare-version-1/styles/main.css
@@ -1,3 +1,30 @@
+/* HEADER */
+
+.team-name {
+  background-color: #099d8d;
+}
+.team-name h1 {
+  font-family: Rubik Mediana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 15px;
+}
+header {
+  position: fixed;
+  width: 100%;
+  height: 60px;
+}
+.nav {
+  background-color: #14d9c4;
+  width: 100%;
+  height: 45px;
+}
+.item li ul .menu {
+  float: left;
+}
 h2 {
   font-family: Rubik Mediana, sans-serif;
   font-size: 24px;
@@ -9,22 +36,14 @@ h3 {
   font-size: 20px;
   text-align: center;
 }
-/* .container-image {
-  height: 190px;
-} */
-.image-adalaber {
-  display: inline-block;
-  width: 100%;
-  box-sizing: content-box;
-  margin: 15px auto 15px auto;
 
+.image-adalaber {
+  width: 100%;
+  margin: 15px auto 15px auto;
   max-width: 180px;
   max-height: 180px;
   border: solid 5px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
-
-  /* position: relative;
-  left: 30px; */
 }
 .container-adalabers {
   text-align: center;
@@ -35,11 +54,8 @@ h3 {
 }
 
 .name {
-  display: flex;
-  justify-content: center;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top: 15px;
 }
 .whoweare {
   background: white;
@@ -50,10 +66,6 @@ h3 {
 .we-are {
   text-transform: uppercase;
   margin-top: 30px;
-
-  margin-left: auto;
-  margin-right: auto;
-  font-weight: 500;
 }
 
 .container-text {
@@ -68,7 +80,7 @@ h3 {
   font-size: 16px;
   width: 300px;
   height: 200px;
-  display: inline-block;
+
   margin: 30px 15px 15px 15px;
   line-height: 1.5;
 }
