--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /* <----------HEADER-------------> */
 .title {
   background-color: #099d8d;
+  color: white;
   text-transform: uppercase;
   width: 100%;
   height: 16px;
@@ -18,9 +19,10 @@ a {
 }
 header {
   width: 100%;
-  height: 421px;
+  height: 304px;
   box-sizing: content-box;
   background-color: aqua;
+  background-color: transparent;
 }
 .nav1 {
   background-color: aqua;
