--- a/styles/main.css
+++ b/styles/main.css
@@ -1,318 +1,314 @@
 /* <----------HEADER-------------> */
 
 .title {
-    background-color: #099d8d;
-    color: white;
-    text-transform: uppercase;
-    width: 100%;
-    height: 16px;
-    position: relative;
-    display: flex;
-    box-sizing: content-box;
-    justify-content: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    font-family: Rubik Mediana, sans-serif;
+  background-color: #099d8d;
+  color: white;
+  text-transform: uppercase;
+  width: 100%;
+  height: 16px;
+  position: relative;
+  display: flex;
+  box-sizing: content-box;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-family: Rubik Mediana, sans-serif;
 }
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 header {
-    width: 100%;
-    height: 304px;
-    box-sizing: content-box;
-    background-color: aqua;
-    background-color: transparent;
+  width: 100%;
+  display: ;
+  height: 304px;
+  box-sizing: content-box;
+  background-color: aqua;
+  background-color: transparent;
 }
 
 .nav1 {
-    background-color: aqua;
-    display: flex;
-    position: relative;
-    height: 45px;
-    padding-right: 17px;
-    padding-right: 17px;
+  background-color: aqua;
+  display: flex;
+  position: relative;
+  height: 45px;
+  padding-right: 17px;
+  padding-right: 17px;
 }
 
 .menu {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 16px;
-    margin-left: 18px;
-    margin-right: 18px;
-    text-transform: uppercase;
-    font-family: Rubik Mediana, sans-serif;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 16px;
+  margin-left: 18px;
+  margin-right: 18px;
+  text-transform: uppercase;
+  font-family: Rubik Mediana, sans-serif;
 }
 
 .imagen1 {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-    overflow: hidden;
-    object-fit: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  overflow: hidden;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .hero {
-    width: 100%;
-    max-width: 600px;
-    max-height: 421px;
-    overflow: hidden;
-    position: relative;
-    z-index: 998;
+  width: 100%;
+  max-width: 600px;
+  max-height: 421px;
+  overflow: hidden;
+  position: relative;
+  z-index: 998;
 }
-
 
 /*****************************************equipo -- fortaleza y debilidades************************/
 
 .frase-presentacion {
-    color: black;
-    background-color: white;
-    font-size: 18px;
-    font-weight: 600;
-    font-family: open sans;
-    z-index: 999;
-    line-height: 1.5;
-    position: relative;
-    bottom: 50px;
-    margin-top: 30px;
-    padding: 5px;
-    text-align: center;
+  color: black;
+  background-color: white;
+  font-size: 18px;
+  font-weight: 600;
+  font-family: open sans;
+  z-index: 999;
+  line-height: 1.5;
+  position: relative;
+  bottom: 50px;
+  margin-top: 30px;
+  padding: 5px;
+  text-align: center;
 }
 
 .equipo {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    position: relative;
-    margin: 0%;
-    padding-left: 30px;
-    padding-right: 30px;
-    align-items: center;
-    text-align: center;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  position: relative;
+  margin: 0%;
+  padding-left: 30px;
+  padding-right: 30px;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .equipo-titulo {
-    color: #14d9c4;
-    font-family: Rubik Mediana, sans-serif;
-    text-transform: uppercase;
-    height: 45px;
-    font-size: 24px;
-    font-weight: 600;
-    margin-top: -50px;
+  color: #14d9c4;
+  font-family: Rubik Mediana, sans-serif;
+  text-transform: uppercase;
+  height: 45px;
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: -50px;
 }
 
 .equipo-parrafo {
-    color: #54585a;
-    font-family: Open Sans;
-    line-height: 1.5;
-    font-size: 16px;
-    padding: 5px;
+  color: #54585a;
+  font-family: Open Sans;
+  line-height: 1.5;
+  font-size: 16px;
+  padding: 5px;
 }
 
 .cuadrado {
-    background-color: white;
-    width: 30px;
-    height: 30px;
-    z-index: 990;
-    position: absolute;
-    left: 45%;
-    bottom: -67px;
-    transform: rotate(45deg);
+  background-color: white;
+  width: 30px;
+  height: 30px;
+  z-index: 990;
+  position: absolute;
+  left: 45%;
+  bottom: -67px;
+  transform: rotate(45deg);
 }
-
 
 /************************************fortaleza y debilidades ***************/
 
 .fortalezas-debilidades {
-    display: flex;
-    flex-direction: column;
-    background-color: #f1f1f1;
-    position: relative;
-    top: 50px;
-    margin: 0%;
-    padding: 45px 15px;
-    align-items: center;
-    text-align: center;
-    box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  background-color: #f1f1f1;
+  position: relative;
+  top: 50px;
+  margin: 0%;
+  padding: 45px 15px;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .fortalezas-titulo {
-    font-family: Rubik Mediana, sans-serif;
-    color: #099d8d;
-    height: 45px;
-    font-size: 24px;
-    font-weight: 600;
+  font-family: Rubik Mediana, sans-serif;
+  color: #099d8d;
+  height: 45px;
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .fortalezas-debilidades-parrafo {
-    color: #54585a;
-    font-family: open sans;
-    line-height: 1.5;
-    font-size: 16px;
-    padding: 5px;
+  color: #54585a;
+  font-family: open sans;
+  line-height: 1.5;
+  font-size: 16px;
+  padding: 5px;
 }
 
 .debilidades-titulo {
-    color: #099d8d;
-    font-family: Rubik Mediana, sans-serif;
-    height: 45px;
-    font-size: 24px;
-    font-weight: 600;
-    margin-top: 45px;
+  color: #099d8d;
+  font-family: Rubik Mediana, sans-serif;
+  height: 45px;
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: 45px;
 }
 
-
 /*************************************************************fin de equipo fortaleza y debilidades seccion gaby***************/
-
 
 /* <-----------WHO WE ARE---------------> */
 
 h2 {
-    font-family: Rubik Mediana, sans-serif;
-    font-size: 24px;
-    color: #099d8d;
-    text-align: center;
-    padding-top: 50px;
+  font-family: Rubik Mediana, sans-serif;
+  font-size: 24px;
+  color: #099d8d;
+  text-align: center;
+  padding-top: 50px;
 }
 
 h3 {
-    font-family: Rubik Mediana, sans-serif;
-    font-size: 20px;
-    text-align: center;
+  font-family: Rubik Mediana, sans-serif;
+  font-size: 20px;
+  text-align: center;
 }
 
 .image-adalaber {
-    width: 100%;
-    margin: 15px auto 15px auto;
-    max-width: 180px;
-    max-height: 180px;
-    border: solid 5px rgba(0, 0, 0, 0.1);
-    border-radius: 4px;
+  width: 100%;
+  margin: 15px auto 15px auto;
+  max-width: 180px;
+  max-height: 180px;
+  border: solid 5px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 
 .container-adalabers {
-    text-align: center;
-    margin: auto;
-    max-width: 600px;
-    padding: 10px;
+  text-align: center;
+  margin: auto;
+  max-width: 600px;
+  padding: 10px;
 }
 
 .name {
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .whoweare {
-    background: white;
-    font-family: OpenSans-Regular, sans-serif;
-    font-size: 16px;
+  background: white;
+  font-family: OpenSans-Regular, sans-serif;
+  font-size: 16px;
 }
 
 .we-are {
-    text-transform: uppercase;
-    margin-top: 30px;
+  text-transform: uppercase;
+  margin-top: 30px;
 }
 
 .container-text {
-    display: flex;
-    justify-content: center;
-    margin-top: -20px;
+  display: flex;
+  justify-content: center;
+  margin-top: -20px;
 }
 
 .wwa-parrafo {
-    color: #54585a;
-    text-align: center;
-    font-size: 16px;
-    width: 300px;
-    height: 200px;
-    margin: 30px 15px 15px 15px;
-    line-height: 1.5;
+  color: #54585a;
+  text-align: center;
+  font-size: 16px;
+  width: 300px;
+  height: 200px;
+  margin: 30px 15px 15px 15px;
+  line-height: 1.5;
 }
 
 .rrss-icons {
-    color: #099d8d;
-    width: 150px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    left: 35%;
-    top: -20px;
-    bottom: 10px;
+  color: #099d8d;
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  left: 35%;
+  top: -20px;
+  bottom: 10px;
 }
 
 .icon a {
-    color: #099d8d;
+  color: #099d8d;
 }
-
 
 /* <---------FOOTER-------------> */
 
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 250px;
-    border-top: solid 1px #b8b8b9;
-    background-color: white;
-    box-sizing: content-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 250px;
+  border-top: solid 1px #b8b8b9;
+  background-color: white;
+  box-sizing: content-box;
 }
 
 .nombredelgrupofooter {
-    width: 100%;
-    height: 20px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    line-height: 1.43;
-    color: #b8b8b9;
+  width: 100%;
+  height: 20px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.43;
+  color: #b8b8b9;
 }
 
 .equipofooter {
-    width: 100%;
-    height: 60px;
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.43;
-    letter-spacing: normal;
-    text-align: center;
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: center;
 }
 
 .itemfooter {
-    color: #54585a;
-    text-transform: uppercase;
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.43;
-    letter-spacing: normal;
-    text-align: center;
+  color: #54585a;
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: center;
 }
 
 .logoadalab {
-    width: 115.9px;
-    height: 45px;
-    margin-top: 30px;
-    margin-bottom: 45px;
+  width: 115.9px;
+  height: 45px;
+  margin-top: 30px;
+  margin-bottom: 45px;
 }
