--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 .title {
   background-color: #099d8d;
   color: white;
+  font-weight: bold;
   text-transform: uppercase;
   width: 100%;
   height: 16px;
@@ -31,6 +32,7 @@ header {
 
 .nav1 {
   background-color: aqua;
+  font-weight: bold;
   display: flex;
   position: relative;
   height: 45px;
