--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@
   font-family: Rubik Mediana, sans-serif;
 }
 
-a {
+.itemMenu a {
   text-decoration: none;
   color: white;
 }
@@ -78,6 +78,7 @@ header {
 .frase-presentacion {
   color: black;
   background-color: white;
+  opacity: 0.8;
   font-size: 18px;
   font-weight: 600;
   font-family: open sans;
@@ -85,7 +86,7 @@ header {
   line-height: 1.5;
   position: relative;
   bottom: 50px;
-  margin-top: 30px;
+  margin-top: 80px;
   padding: 5px;
   text-align: center;
 }
