--- a/styles/main.css
+++ b/styles/main.css
@@ -2,14 +2,12 @@
 
 .title {
   background-color: #099d8d;
+  opacity: 0.9;
   color: white;
   font-weight: bold;
   text-transform: uppercase;
   width: 100%;
-  height: 16px;
-  position: relative;
   display: flex;
-  box-sizing: content-box;
   justify-content: center;
   padding-top: 16px;
   padding-bottom: 16px;
@@ -26,19 +24,17 @@ header {
   display: ;
   height: 304px;
   box-sizing: content-box;
-  background-color: aqua;
-  background-color: transparent;
 }
 
 .nav1 {
   background-color: aqua;
+  opacity: 0.5;
   font-weight: bold;
   display: flex;
   padding-left: 10px;
   position: relative;
   height: 45px;
-  padding-right: 17px;
-  padding-right: 17px;
+  padding-right: 10px;
 }
 
 .menu {
@@ -54,14 +50,7 @@ header {
 
 .imagen1 {
   width: 100%;
-  height: 100%;
-  object-fit: fill;
-  overflow: hidden;
-  object-fit: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  height: 275px;
 }
 
 .hero {
@@ -86,7 +75,7 @@ header {
   line-height: 1.5;
   position: relative;
   bottom: 50px;
-  margin-top: 80px;
+  margin-top: 50px;
   padding: 5px;
   text-align: center;
 }
