--- a/styles/main.css
+++ b/styles/main.css
@@ -6,10 +6,8 @@
   font-weight: bold;
   text-transform: uppercase;
   width: 100%;
-  height: 16px;
-  position: relative;
+
   display: flex;
-  box-sizing: content-box;
   justify-content: center;
   padding-top: 16px;
   padding-bottom: 16px;
@@ -31,12 +29,12 @@ header {
 
 .nav1 {
   background-color: aqua;
+  opacity: 0.5;
   font-weight: bold;
   display: flex;
   padding-left: 10px;
   position: relative;
   height: 45px;
-  padding-right: 17px;
   padding-right: 17px;
 }
 
@@ -53,14 +51,6 @@ header {
 
 .imagen1 {
   width: 100%;
-  height: 100%;
-  object-fit: fill;
-  overflow: hidden;
-  object-fit: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 }
 
 .hero {
@@ -77,6 +67,7 @@ header {
 .frase-presentacion {
   color: black;
   background-color: white;
+  opacity: 0.8;
   font-size: 18px;
   font-weight: 600;
   font-family: open sans;
@@ -84,7 +75,7 @@ header {
   line-height: 1.5;
   position: relative;
   bottom: 50px;
-  margin-top: 30px;
+  margin-top: -10px;
   padding: 5px;
   text-align: center;
 }
