--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ header {
   height: 304px;
   box-sizing: content-box;
   background-color: aqua;
-  background-color: transparent;
+  background-color: transpagrent;
 }
 
 .nav1 {
