migración de team y whoweare

--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -1,34 +1,38 @@
-<main class="page__main">
-    <h2>Este es el starter kit de Adalab</h2>
-    <p>Lo usamos para aprender:</p>
-    <ul class="main__list">
-        <li>Sass</li>
-        <li>HTML partials</li>
-        <li>Gulp</li>
-        <li>y muchas cosas más</li>
-    </ul>
-    <p>Si quieres saber cúales son las rutas correctas para:</p>
-    <ul class="main__list">
-        <li>
-            una <code class="code">&lt;img /&gt;</code> mira el fichero
-            <code class="code">./src/html/partials/header.html</code>.
-        </li>
-        <li>
-            y para un <code class="code">background-image</code> mira el fichero
-            <code class="code">./src/html/scss/layout/_page.scss</code>.
-        </li>
-    </ul>
-    <p>
-        Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-        <code class="code">./src/html/index.html</code> y
-        <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos enlaces:
+<section class="equipo">
+    <div class="frase-presentacion"> "Son nuestras decisiones las que muestran quienes somos realmente, más que
+        nuestras habilidades."<br>- J. K. Rowling </div>
+
+    <h2 class="equipo-titulo" id="team">Equipo</h2>
+    <p class="equipo-parrafo">
+        La necesidad de formación es una constante, mientras que en el mundo en que vivimos es incierto, por lo
+        que hemos decidido dar un paso al frente y ser dueñas de nuestro destino. Por ello estamos deseando
+        conocer este mundo de la programación y hemos decidido
+        apostar por una formación con ADALAB. <br> </br>
+
+        Somos un equipo recién constituido para aprender a desarrollar servicios IT, estamos aprendiendo a crear
+        soluciones integrales de alto componente tecnológico en front-end, social y humano. Sentimos pasión por
+        aprender y mejorar laboralmente.
     </p>
-    <ul class="main__list">
-        <li>
-            <include src="./link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></include>
-        </li>
-        <li>
-            <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-        </li>
-    </ul>
-</main>
+
+    <div class="cuadrado"></div>
+
+</section>
+
+<section class="fortalezas-debilidades">
+    <h3 class="fortalezas-titulo">Fortalezas</h3>
+    <p class="fortalezas-debilidades-parrafo">
+        A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las
+        principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos
+        hasta lograr nuestros objetivos. Tenemos recursos necesarios
+        para recuperarnos de las caídas y seguir adelante.
+    </p>
+
+    <h3 class="debilidades-titulo">Debilidades</h3>
+    <p class="fortalezas-debilidades-parrafo">
+        La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
+        los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
+        juntas para ayudarnos a mejorar como personas y
+        poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los
+        objetivos en comun.
+    </p>
+</section>
