--- a/src/html/partials/whoweare.html
+++ b/src/html/partials/whoweare.html
@@ -1,1 +1,124 @@
-<a class="@@aClass" href="@@url">@@text</a>
+<section class="whoweare">
+
+    <h2 class="we-are" id="quienesSomos">Quiénes somos</h2>
+
+    <div class="container-adalabers">
+        <article>
+            <img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+
+
+            <h3 class="name">Paloma Arévalo </h3>
+            <div class="container-text">
+                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
+                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                </p>
+                <div class="rrss-icons">
+                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                    <div class="icon">
+                        <a href="">
+                            <a href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </a>
+                    </div>·
+                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+        </article>
+        <article>
+
+
+            <img src="./images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
+
+            <h3 class="name">Claudia Santana </h3>
+
+            <div class="container-text">
+
+                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
+                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                </p>
+                <div class="rrss-icons">
+                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                    <div class="icon">
+                        <a href="">
+                            <a href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </a>
+                    </div>·
+                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </article>
+
+        <article>
+            <img src="./images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+
+            <h3 class="name">Gabriela Gil</h3>
+            <div class="container-text">
+                <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se
+                    marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de
+                    resolver problemas que se presentan en su día a día. Es una luchadora.
+                </p>
+                <div class="rrss-icons">
+                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                    <div class="icon">
+                        <a href="">
+                            <a href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </a>
+                    </div>·
+                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+        </article>
+        <article>
+            <img src="./images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+
+            <h3 class="name">María Molina </h3>
+            <div class="container-text">
+                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
+                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
+                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                </p>
+                <div class="rrss-icons">
+                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                    <div class="icon">
+                        <a href="">
+                            <a href="">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </a>
+                    </div>·
+                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+
+
+            </div>
+    </div>
+    </article>
+</section>
