--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,27 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header>
+  <h1 class="title"><strong>Divitis</strong></h1>
+  <nav class="nav1">
+    <ul class="menu">
+      <li class="itemMenu">
+        <a href="#team" alt="team" title="equipo1"><strong>Equipo</strong></a>
+      </li>
+      <li class="itemMenu">
+        <a href="#quienesSomos" alt="quienes" title="who"
+          ><strong>Quienes somos</strong></a
+        >
+      </li>
+      <li class="itemMenu">
+        <a href="contacto" alt="contact" title="contact"
+          ><strong>Contacto</strong></a
+        >
+      </li>
+    </ul>
+  </nav>
+  <div class="hero">
+    <img
+      class="imagen1"
+      src="./images/imagen-temporal.jpg"
+      alt="imagen temporal"
+    />
+  </div>
 </header>
