--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,15 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer class="footer">
+    <p class="nombredelgrupofooter">Divitis &copy;2021</p>
+    <nav>
+        <ul class="equipofooter">
+            <li class="itemfooter">
+                <a href="#team" alt="team" title="equipo1">Equipo</a>
+            </li>
+            <li class="itemfooter">
+                <a href="#quienesSomos" alt="team" title="equipo1">Quiénes somos</a>
+            </li>
+            <li class="itemfooter">Contacto</li>
+        </ul>
+    </nav>
+    <img src="./images/logo-adalab.png" alt="logo" class="logoadalab" />
 </footer>
