--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -6,22 +6,14 @@
         <a href="#team" alt="team" title="equipo1"><strong>Equipo</strong></a>
       </li>
       <li class="itemMenu">
-        <a href="#quienesSomos" alt="quienes" title="who"
-          ><strong>Quienes somos</strong></a
-        >
+        <a href="#quienesSomos" alt="quienes" title="who"><strong>Quienes somos</strong></a>
       </li>
       <li class="itemMenu">
-        <a href="contacto" alt="contact" title="contact"
-          ><strong>Contacto</strong></a
-        >
+        <a href="contacto" alt="contact" title="contact"><strong>Contacto</strong></a>
       </li>
     </ul>
   </nav>
   <div class="hero">
-    <img
-      class="imagen1"
-      src="./images/imagen-temporal.jpg"
-      alt="imagen temporal"
-    />
+    <img class="imagen1" src="../../images/imagen-temporal.jpg" alt="imagen temporal" />
   </div>
 </header>
