--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -11,5 +11,5 @@
             <li class="itemfooter">Contacto</li>
         </ul>
     </nav>
-    <img src="./images/logo-adalab.png" alt="logo" class="logoadalab" />
+    <img src="./assets/images/logo-adalab.png" alt="logo" class="logoadalab" />
 </footer>
