imagen de header indexada de public

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
-@import 'core/variables';
-@import 'core/reset';
-@import 'layout/header';
-@import 'layout/team';
-@import 'layout/whoweare';
-@import 'layout/footer';
-@import 'pages/index';
+@import "core/variables";
+@import "core/reset";
+@import "layout/header";
+@import "layout/team";
+@import "layout/whoweare";
+@import "layout/footer";
+@import "pages/index";
