--- a/src/html/partials/whoweare.html
+++ b/src/html/partials/whoweare.html
@@ -4,7 +4,7 @@
 
     <div class="container-adalabers">
         <article>
-            <img src="./images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+            <img src="./assets/images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
 
 
             <h3 class="name">Paloma Arévalo </h3>
@@ -37,7 +37,7 @@
         <article>
 
 
-            <img src="./images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
+            <img src="./assets/images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
 
             <h3 class="name">Claudia Santana </h3>
 
@@ -67,7 +67,7 @@
         </article>
 
         <article>
-            <img src="./images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+            <img src="./assets/images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
 
             <h3 class="name">Gabriela Gil</h3>
             <div class="container-text">
@@ -95,7 +95,7 @@
 
         </article>
         <article>
-            <img src="./images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+            <img src="./assets/images/foto-maria.jpg" alt="imagen" class="image-adalaber">
 
             <h3 class="name">María Molina </h3>
             <div class="container-text">
