--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -20,7 +20,7 @@
   <div class="hero">
     <img
       class="imagen1"
-      src="../../../public/assets/images/imagen-temporal.jpg"
+      src="./assets/images/imagen-temporal.jpg"
       alt="imagen temporal"
     />
   </div>
