--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -19,20 +19,26 @@
 </section>
 
 <section class="fortalezas-debilidades">
-    <h3 class="fortalezas-titulo">Fortalezas</h3>
-    <p class="fortalezas-debilidades-parrafo">
-        A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las
-        principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos
-        hasta lograr nuestros objetivos. Tenemos recursos necesarios
-        para recuperarnos de las caídas y seguir adelante.
-    </p>
+    <div class="fortalezas">
+        <h3 class="fortalezas-titulo">Fortalezas</h3>
+        <p class="fortalezas-debilidades-parrafo">
+            A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las
+            principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos
+            hasta lograr nuestros objetivos. Tenemos recursos necesarios
+            para recuperarnos de las caídas y seguir adelante.
+        </p>
+    </div>
 
-    <h3 class="debilidades-titulo">Debilidades</h3>
-    <p class="fortalezas-debilidades-parrafo">
-        La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
-        los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
-        juntas para ayudarnos a mejorar como personas y
-        poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los
-        objetivos en comun.
-    </p>
+    <div class="debilidades">
+        <h3 class="debilidades-titulo">Debilidades</h3>
+        <p class="fortalezas-debilidades-parrafo">
+            La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
+            los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
+            juntas para ayudarnos a mejorar como personas y
+            poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los
+            objetivos en comun.
+        </p>
+    </div>
+   
+    
 </section>
