arreglar error team scss

--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -96,13 +96,11 @@
   margin-top: 45px;
 }
 
-
 @media (min-width: 768px) {
   .fortalezas-debilidades {
     display: flex;
     flex-direction: row;
     padding: 55px 45px;
-    
   }
   .equipo {
     padding-left: 45px;
@@ -110,5 +108,6 @@
   }
 
   .debilidades-titulo {
-    margin: 0px;
+    margin: 0;
   }
+}
