centrado de fortalezas y debilidades

--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -35,8 +35,7 @@
             La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
             los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
             juntas para ayudarnos a mejorar como personas y
-            poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los
-            objetivos en comun.
+            poder llegar a ser buenas programadoras. 
         </p>
     </div>
    
