--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -110,4 +110,12 @@
   .debilidades-titulo {
     margin: 0;
   }
+  .fortalezas {
+    width: 50%;
+    margin-right: 15px;
+  }
+  .debilidades {
+    width: 50%;
+    margin-left: 15px;
+  }
 }
