modificacion frase presentacion

--- a/src/html/partials/team.html
+++ b/src/html/partials/team.html
@@ -1,6 +1,7 @@
 <section class="equipo">
     <div class="frase-presentacion"> "Son nuestras decisiones las que muestran quienes somos realmente, más que
-        nuestras habilidades."<br>- J. K. Rowling </div>
+        nuestras habilidades."<br>- J. K. Rowling 
+    </div>
 
     <h2 class="equipo-titulo" id="team">Equipo</h2>
     <p class="equipo-parrafo">
