whoweare responsive tablet

--- a/src/html/partials/whoweare.html
+++ b/src/html/partials/whoweare.html
@@ -1,124 +1,134 @@
 <section class="whoweare">
 
-    <h2 class="we-are" id="quienesSomos">Quiénes somos</h2>
-
-    <div class="container-adalabers">
-        <article>
-            <img src="./assets/images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+    <h2 id="quienesSomos">Quiénes somos</h2>
 
 
+    <article class="adalaber-impar">
+
+        <img src="./assets/images/foto-paloma.jpg" alt="imagen" class="image-adalaber">
+
+
+        <div class="container-text">
             <h3 class="name">Paloma Arévalo </h3>
-            <div class="container-text">
-                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
-                </p>
-                <div class="rrss-icons">
-                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
-                    <div class="icon">
+
+            <p class="wwa-parrafo"> Paloma es una mujer en proceso de reinvención. Tras años en el sector
+                turístico
+                online ha decidido lanzarse al desarrollo web para tener una visión global. Curiosa y
+                constante, no
+                se rinde hasta encontrar la solución óptima.</p>
+            <div class="rrss-icons">
+                <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon">
+                    <a href="">
                         <a href="">
-                            <a href="">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>·
-                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
-                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
-                    </div>
+                    </a>
+                </div>·
+                <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
                 </div>
-
-
             </div>
 
 
 
 
-        </article>
-        <article>
+        </div>
 
 
-            <img src="./assets/images/foto-gabi.jpg" alt="imagen" class="image-adalaber">
 
+
+    </article>
+    <article class="adalaber-par">
+
+
+        <img src="./assets/images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+
+        <div class="container-text">
             <h3 class="name">Claudia Santana </h3>
 
-            <div class="container-text">
 
-                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
-                </p>
-                <div class="rrss-icons">
-                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
-                    <div class="icon">
+
+            <p class="wwa-parrafo"> Dedicada toda su vida al negocio familiar, encontró su vocación fundando
+                una
+                organización juvenil. Ser programadora es el primer paso en el largo camino a recorrer para
+                cambiar
+                su futuro profesional y dedicarse a lo que realmente le apasiona.
+            </p>
+            <div class="rrss-icons">
+                <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon">
+                    <a href="">
                         <a href="">
-                            <a href="">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>·
-                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
-                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
-                    </div>
+                    </a>
+                </div>·
+                <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
                 </div>
-
-
             </div>
 
-        </article>
 
-        <article>
-            <img src="./assets/images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+        </div>
 
+    </article>
+
+    <article class="adalaber-impar">
+        <img src="./assets/images/foto-claudia.jpg" alt="imagen" class="image-adalaber">
+
+        <div class="container-text">
             <h3 class="name">Gabriela Gil</h3>
-            <div class="container-text">
-                <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se
-                    marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de
-                    resolver problemas que se presentan en su día a día. Es una luchadora.
-                </p>
-                <div class="rrss-icons">
-                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
-                    <div class="icon">
+
+            <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se
+                marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de
+                resolver problemas que se presentan en su día a día. Es una luchadora.
+            </p>
+            <div class="rrss-icons">
+                <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon">
+                    <a href="">
                         <a href="">
-                            <a href="">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>·
-                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
-                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
-                    </div>
+                    </a>
+                </div>·
+                <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
                 </div>
-
-
             </div>
 
 
-        </article>
-        <article>
-            <img src="./assets/images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+        </div>
 
+
+    </article>
+    <article class="adalaber-par">
+        <img src="./assets/images/foto-maria.jpg" alt="imagen" class="image-adalaber">
+
+        <div class="container-text">
             <h3 class="name">María Molina </h3>
-            <div class="container-text">
-                <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                    esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                    eaque nesciunt illum! Dicta cumque animi illo enim totam?
-                </p>
-                <div class="rrss-icons">
-                    <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
-                    <div class="icon">
+
+            <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
+                esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
+                eaque nesciunt illum! Dicta cumque animi illo enim totam?
+            </p>
+            <div class="rrss-icons">
+                <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
+                <div class="icon">
+                    <a href="">
                         <a href="">
-                            <a href="">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
+                            <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>·
-                    <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
-                    <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
-                    </div>
+                    </a>
+                </div>·
+                <div class="icon"><a href=""><i class="fab fa-github-alt"></i></a></div>·
+                <div class="icon"><a href=""><i class="fas fa-envelope"></i></a>
                 </div>
-
-
             </div>
-    </div>
+
+
+        </div>
+        </div>
     </article>
 </section>
