--- a/src/scss/layout/_whoweare.scss
+++ b/src/scss/layout/_whoweare.scss
@@ -1,38 +1,24 @@
-/* <-----------WHO WE ARE---------------> */
-
-.image-adalaber {
-  width: 100%;
-  margin: 15px auto 15px auto;
-  max-width: 180px;
-  max-height: 180px;
-  border: solid 5px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-}
-
-.container-adalabers {
-  text-align: center;
-  margin: auto;
-  max-width: 600px;
-  padding: 10px;
-}
-
-.name {
-  font-family: Rubik Mediana, sans-serif;
-  font-size: 20px;
-  text-align: center;
-  text-align: center;
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
-
 .whoweare {
   background: white;
   font-family: OpenSans-Regular, sans-serif;
   font-size: 16px;
+  margin: auto;
+  max-width: 600px;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
-.we-are {
+@media all and (min-width: 678px) {
+  .whoweare {
+    max-width: 100vw;
+  }
+}
+.whoweare h2 {
   font-family: Rubik Mediana, sans-serif;
+  font-weight: bold;
   font-size: 24px;
   color: #099d8d;
   text-align: center;
@@ -42,36 +28,164 @@
   margin-top: 30px;
 }
 
-.container-text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: -20px;
-  height: auto;
+.adalaber-impar {
+  @media all and (min-width: 678px) {
+    display: flex;
+    flex-direction: row;
+    margin-right: 12vw;
+    margin-left: 12vw;
+  }
+
+  .image-adalaber {
+    width: 100%;
+    margin: 15px auto 15px auto;
+    max-width: 180px;
+    max-height: 180px;
+    border: solid 5px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    @media all and (min-width: 678px) {
+      width: 25vw;
+    }
+  }
+
+  .container-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -20px;
+    height: auto;
+    @media all and (min-width: 678px) {
+      width: 72vw;
+      align-items: flex-start;
+      padding-top: 20px;
+    }
+  }
+
+  .name {
+    font-family: Rubik Mediana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    display: inline-block;
+
+    margin-top: 30px;
+
+    @media all and (min-width: 678px) {
+      margin-left: 3em;
+      margin-right: 4em;
+    }
+  }
+  .wwa-parrafo {
+    color: #54585a;
+    text-align: center;
+    font-size: 16px;
+    width: 300px;
+    height: auto;
+    margin: 30px 15px 15px 15px;
+    line-height: 1.5;
+    @media all and (min-width: 678px) {
+      width: 440px;
+      text-align: left;
+      margin-left: 3em;
+      margin-right: 3em;
+      margin-top: 10px;
+    }
+  }
+  .rrss-icons {
+    color: #099d8d;
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    @media all and (min-width: 678px) {
+      margin-left: 3em;
+      margin-right: 4em;
+    }
+  }
+  .rrss-icons a {
+    color: #099d8d;
+  }
 }
 
-.wwa-parrafo {
-  color: #54585a;
-  text-align: center;
-  font-size: 16px;
-  width: 300px;
-  height: auto;
-  margin: 30px 15px 15px 15px;
-  line-height: 1.5;
-}
+.adalaber-par {
+  @media all and (min-width: 678px) {
+    display: flex;
+    flex-direction: row;
 
-.rrss-icons {
-  color: #099d8d;
-  width: 150px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
-  margin-bottom: 25px;
-}
+    margin-right: 8vw;
+    margin-left: 8vw;
+  }
 
-.icon {
-  a {
+  .image-adalaber {
+    width: 100%;
+    margin: 15px auto 15px auto;
+    max-width: 180px;
+    max-height: 180px;
+    border: solid 5px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    @media all and (min-width: 678px) {
+      width: 25vw;
+      order: 2;
+    }
+  }
+
+  .container-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -20px;
+    height: auto;
+    @media all and (min-width: 678px) {
+      width: 72vw;
+      align-items: flex-end;
+      padding-top: 20px;
+      order: 1;
+    }
+  }
+
+  .name {
+    font-family: Rubik Mediana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    display: inline-block;
+
+    margin-top: 30px;
+    @media all and (min-width: 678px) {
+      margin-left: 3em;
+      margin-right: 4em;
+    }
+  }
+  .wwa-parrafo {
+    color: #54585a;
+    text-align: center;
+    font-size: 16px;
+    width: 300px;
+    height: auto;
+    margin: 30px 15px 15px 15px;
+    line-height: 1.5;
+    @media all and (min-width: 678px) {
+      width: 440px;
+      text-align: right;
+      margin-left: 3em;
+      margin-right: 3em;
+      margin-top: 10px;
+    }
+  }
+  .rrss-icons {
+    color: #099d8d;
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    @media all and (min-width: 678px) {
+      margin-left: 3em;
+      margin-right: 4em;
+    }
+  }
+  .rrss-icons a {
     color: #099d8d;
   }
 }
