--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,15 +1,17 @@
 <footer class="footer">
-    <p class="nombredelgrupofooter">Divitis &copy;2021</p>
-    <nav>
-        <ul class="equipofooter">
-            <li class="itemfooter">
-                <a href="#team" alt="team" title="equipo1">Equipo</a>
-            </li>
-            <li class="itemfooter">
-                <a href="#quienesSomos" alt="team" title="equipo1">Quiénes somos</a>
-            </li>
-            <li class="itemfooter">Contacto</li>
-        </ul>
-    </nav>
-    <img src="./assets/images/logo-adalab.png" alt="logo" class="logoadalab" />
+    <div class="footer-content">
+        <p class="nombrefooter">Divitis &copy;2021</p>
+        <nav class="menufooter">
+            <ul>
+                <li class="itemfooter">
+                    <a href="#team" alt="team" title="equipo1">Equipo</a>
+                </li>
+                <li class="itemfooter">
+                    <a href="#quienesSomos" alt="team" title="equipo1">Quiénes somos</a>
+                </li>
+                <li class="itemfooter">Contacto</li>
+            </ul>
+        </nav>
+        <img src="./assets/images/logoadalab.png" alt="logo" class="logoadalab" />
+    </div>
 </footer>
