--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,5 @@
 .footer {
-    display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
     height: 250px;
     border-top: solid 1px #b8b8b9;
@@ -8,12 +7,19 @@
     box-sizing: content-box;
 }
 
-.nombredelgrupofooter {
+.footer-content {
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+
+.nombrefooter {
     width: 100%;
     height: 20px;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
@@ -21,13 +27,14 @@
     color: #b8b8b9;
 }
 
-.equipofooter {
+.menufooter {
     width: 100%;
     height: 60px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
     font-weight: 600;
@@ -35,7 +42,7 @@
     font-style: normal;
     line-height: 1.43;
     letter-spacing: normal;
-    text-align: center;
+    opacity: 0.75;
 }
 
 .itemfooter {
@@ -57,8 +64,71 @@
 }
 
 .logoadalab {
+    display: flex;
+    flex-direction: column;
     width: 115.9px;
     height: 45px;
-    margin-top: 30px;
-    margin-bottom: 45px;
+    margin: 30px auto 45px;
+}
+
+@media (min-width: 768px) {
+    .footer {
+        padding: 24px 45px 56px;
+    }
+    .footer-content {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+    .nombrefooter {
+        top: 0;
+        width: 160px;
+        height: 25%;
+        float: left;
+        margin: 0px 182px 15px 0;
+        justify-content: right;
+        align-items: flex-start;
+    }
+    .logoadalab {
+        float: left;
+        order: -1;
+        margin: -21px 238.1px 4px -7px;
+        width: 115.9px;
+        height: 25%;
+    }
+    .menufooter {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        float: right;
+        margin: -25px 0 0 182px;
+        width: 75%;
+        opacity: 0.75;
+    }
+    .itemfooter {
+        text-align: right;
+    }
+}
+
+@media (min-width: 1200px) {
+    .footer {
+        width: 1200px;
+        height: 161px;
+        margin: 30px 0 0;
+        padding: 24px 138px 47px;
+    }
+    .nombrefooter {
+        width: 172px;
+        height: 20px;
+        margin: 6px 428px 15px 7px;
+    }
+    .logoadalab {
+        margin: 15px 0px 4px 0;
+    }
+    .menufooter {
+        width: 324px;
+        height: 90px;
+        margin: -26px 0 0 428px;
+        opacity: 0.75;
+    }
 }
