creo pagina de contacto

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,9 +7,12 @@
                     <a href="#team" alt="team" title="equipo1">Equipo</a>
                 </li>
                 <li class="itemfooter">
-                    <a href="#quienesSomos" alt="team" title="equipo1">Quiénes somos</a>
+                    <a href="#quienesSomos" alt="whoweare" title="equipo1">Quiénes somos</a
+					>
+				</li>
+				<li class="itemfooter">
+					<a href="../contacto.html" alt="contacto" title="equipo1">Contacto</a>
                 </li>
-                <li class="itemfooter">Contacto</li>
             </ul>
         </nav>
         <img src="./assets/images/logoadalab.png" alt="logo" class="logoadalab" />
