--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -49,6 +49,8 @@ header {
 
 .imagen1 {
   width: 100%;
+  max-height: 212px;
+  max-width: 595px;
 }
 
 .hero {
@@ -58,6 +60,4 @@ header {
   overflow: hidden;
   position: relative;
   z-index: 998;
-}
-@media and all {
 }
