--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,14 @@
 /* <----------HEADER-------------> */
 
-.title {
+.cabecera {
   background-color: #099d8d;
+  opacity: 0.9;
+  position: fixed;
+  height: 50px;
+  width: 100%;
+  z-index: 999;
+}
+.title {
   color: white;
   font-weight: bold;
   text-transform: uppercase;
@@ -20,13 +27,14 @@
 
 header {
   width: 100%;
+  height: 400px;
 }
 
 .nav1 {
   background-color: aqua;
+  opacity: 0.9;
   font-weight: bold;
   display: flex;
-  padding-left: 10px;
 }
 
 .menu {
@@ -42,51 +50,35 @@ header {
 
 .imagen1 {
   width: 100%;
-  max-height: 500px;
-  overflow: hidden;
+  height: 400px;
+  top: 0;
+  position: absolute;
 }
 
 .hero {
-  position: relative;
-  z-index: 998;
+  position: absolute;
+  height: 605px;
+  width: 100%;
 }
 @media all and (min-width: 768px) {
-  .hero {
+  .cabecera {
     display: flex;
-    width: 100vw;
-  }
-  .title {
-    justify-content: flex-start;
-    padding-left: 45px;
-    font-size: 16px;
-    padding-bottom: 15px;
-    padding-right: 15px;
-    width: 160px;
-    display: inline;
+    flex-direction: row;
+    width: 100%;
   }
   .nav1 {
     background-color: #099d8d;
-    display: inline-block;
+    justify-content: space-between;
+    width: 100%;
   }
-  .menu {
-    background-color: #099d8d;
-    padding-left: 16vw;
-    margin-right: 2vw;
+  .title {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    margin-left: 45px;
   }
-  .itemMenu {
-    font-size: 15px;
-    line-height: 2;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-  header {
-    background-color: #099d8d;
-  }
-}
-@media all and (min-width: 1024px) {
   .menu {
-    padding-left: 25vw;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 45px;
   }
 }
