--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -62,6 +62,7 @@ header {
 }
 @media all and (min-width: 768px) {
   .cabecera {
+    opacity: 0.9;
     display: flex;
     flex-direction: row;
     width: 100%;
